# pinyin-shared

./: .gitignore  CMakeLists.txt  Cargo.toml  Readme.md  Release.md  build-cli.ps1  build.ps1  use_pinyin.py
cli/: Cargo.toml  main.rs  pinyin.cpp
cmd/: Readme.md  command.cc  lib.h
core/: Cargo.toml  build.rs  dick.rs  dick_data.rs  lib.rs
core/tests/: dick_test.rs  lib_test.rs
demo/: Readme.md  call-dll.go  call-dll.py  demo.c  demo.h  demo.ps1
doc/: c-cpp-reference.md  pinyin_dick.h  update-piinyin-c.py
doc/builtin/: Readme.md
doc/builtin/c/: math.h  stdio.h  stdlib.h  string.h  time.h
pinyin-bind/pinyin-rs/: Cargo.toml  Readme.md  TODOs.md  make-raw.py  release.ps1
pinyin-bind/pinyin-rs/.cargo/: config
pinyin-bind/pinyin-rs/source/: raw_dick-tpl.rs
pinyin-bind/pinyin-rs/source/test-py/: call-lib.py
pinyin-bind/pinyin-rs/src/: lib.rs  pinyin.rs  raw_dick.rs
pinyin-bind/pinyin-rs/src/test/: mod.rs  pinyin.rs
shared/: Cargo.toml  lib.rs
source/dick/: gen_dick_rs.py  tpl_dick.rs
src/: pinyin.c  pinyin.h  pinyin_dick.h  version.h
tests/learning/: vars.c  vars.cpp
tests/single/: args.c  strings.c
