[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Conero"]

[[bin]]
name = "pyin"
path = "main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.13", features = ["derive"] }
core = { version = "0.1.0", path = "../core" }


[profile.release]
# 发生不可恢复错误时进行终止操作
panic = 'abort'