[package]
name = "shared"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
# 生成 dll 文件
crate-type = ["cdylib"]
name = "pinyin"

[dependencies]

#
#[target.x86_64-unknown-linux-musl]
#linker = "rust-lld"
#rustflags = ["-C", "linker-flavor=ld.lld"]
#
#[target.x86_64-unknown-linux-gnu]
#linker = "rust-lld"
#rustflags = ["-C", "linker-flavor=ld.lld"]