[package]
name = "pinyin"
version = "0.1.0"
authors = ["Conero <conero@163.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]
#项目的入口文件
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2"
lazy_static = "1.4.0"